@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -21,6 +21,12 @@ namespace {
         }
         int value() {
             return counter.value();
+        }
+        int const_value() const {
+            return counter.value();
+        }
+        int increment() {
+            return ++counter;
         }
     };
     executor *factory( fostlib::counter &c ) {
@@ -52,6 +58,55 @@ FSL_TEST_FUNCTION( in_proc_futures ) {
     FSL_CHECK_EQ( ipc.asynchronous< int >(
         boost::lambda::bind( &executor::value, boost::lambda::_1 )
     )(), 1 );
+}
+
+
+FSL_TEST_FUNCTION( in_proc_future_const_method ) {
+    fostlib::counter count;
+    fostlib::in_process< executor > ipc( new executor( count ) );
+    FSL_CHECK_EQ( count.value(), 1 );
+    FSL_CHECK_EQ( ipc.synchronous< int >(
+        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
+    ), 1 );
+    FSL_CHECK_EQ( ipc.asynchronous< int >(
+        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
+    )(), 1 );
+}
+
+
+FSL_TEST_FUNCTION( in_proc_void_future ) {
+    fostlib::counter count;
+    fostlib::in_process< executor > ipc( new executor( count ) );
+    FSL_CHECK_EQ( count.value(), 1 );
+    FSL_CHECK_EQ( ipc.synchronous< int >(
+        boost::lambda::bind( &executor::value, boost::lambda::_1 )
+    ), 1 );
+    FSL_CHECK_EQ( ipc.synchronous< int >(
+        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
+    ), 1 );
+    FSL_CHECK_EQ( ipc.synchronous< int >(
+        boost::lambda::bind( &executor::increment, boost::lambda::_1 )
+    ), 2 );
+    ipc.synchronous< void >(
+        boost::lambda::bind( &executor::increment, boost::lambda::_1 )
+    );
+    FSL_CHECK_EQ( ipc.synchronous< int >(
+        boost::lambda::bind( &executor::value, boost::lambda::_1 )
+    ), 3 );
+    // We should see a segfault here if the we don't wait on the execution properly
+    ipc.synchronous< void >(
+        boost::lambda::bind( &executor::increment, boost::lambda::_1 )
+    );
+}
+
+
+FSL_TEST_FUNCTION( const_in_proc_future_const_method ) {
+    fostlib::counter count;
+    const fostlib::in_process< executor > ipc( new executor( count ) );
+    FSL_CHECK_EQ( count.value(), 1 );
+    FSL_CHECK_EQ( ipc.synchronous< int >(
+        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
+    ), 1 );
 }
 
 
