@@ -1,5 +1,5 @@
 /*
-    Copyright 1997-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 1997-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -25,6 +25,7 @@ namespace fostlib {
         virtual ~counter();
 
         int operator ++();
+        int operator --();
         int value() const;
 
     private:
