@@ -1,3 +1,14 @@
+2012-08-03  Kirit Saelensminde  <kirit@felspar.com>
+ Added instrumentation for the number of worker threads in use. Also added decrement to the counter implementation.
+ Fixed a bug on Windows where the pre-increment would return the old value rather than the new one.
+ Dynamic loading of a library now tries with platform specific prefixes and suffixes before trying the name provided.
+
+2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
+ Implement JSON casts for json::array_t and json::object_t.
+ Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
+ Implement futures with void type for worker and in_proc. We can still wait on them.
+ Added startswith and endswith members to the string class.
+
 2012-07-22  Kirit Saelensminde  <kirit@felspar.com>
  Allow time stamps and time differences to be added and subtracted.
 
